src/other/mico-2.3.12/test/idl/error/expected-stderr-case11.idl
case11.idl:9: identifier 'A' defined twice in this scope
